--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
 	<string name = "app_name">달리기 운동</string>
+	<string name = "title_map_fragment">달리기 운동</string>
+	<string name = "title_record_fragment">기록</string>
+	<string name = "title_setting_fragment">설정</string>
 </resources>
